<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/add_menu"
            android:title="@string/ajouter"
            app:showAsAction="always"
            android:icon="@drawable/add_circle"
            tools:ignore="UnusedAttribute"/>
    <item
            android:id="@+id/search_menu"
            android:title="@string/rechercher"
            app:showAsAction="ifRoom"
            android:icon="@drawable/search"
            tools:ignore="UnusedAttribute"/>
    <item android:title="@string/parametre"
          android:id="@+id/setting_menu"
          app:showAsAction="ifRoom"
          android:icon="@drawable/settings"
          tools:ignore="UnusedAttribute" android:visible="true" android:enabled="true">
        <menu>
            <item android:id="@+id/logout_menu"
                  android:title="@string/deconnexion"/>
            <item android:id="@+id/add_spe_menu" android:title="@string/add_spe" />
        </menu>
    </item>
</menu>