<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="20dp"
              android:layout_height="match_parent">
    <ImageView
            android:id="@+id/success_image_password_anim"
            android:contentDescription="@string/user"
            android:layout_gravity="center"
            app:srcCompat="@drawable/success_anim"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_gravity="center"
            android:text="@string/pass_edited"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:text="@string/detail_password"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/email"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="13sp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_new_password_dialog_pass1"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="13sp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/new_pass"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="13sp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_new_password_dialog_pass2"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="13sp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_marginStart="15dp"
          android:layout_height="2dp" android:background="@color/custom"/>
    <ImageView
            android:id="@+id/med_info_new_password_dialog_copy_icon"
            android:contentDescription="@string/logo"
            android:src="@drawable/content_copy"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:tooltipText="@string/copy"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:ignore="UnusedAttribute"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nb"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/give_med"
                android:padding="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
            android:id="@+id/med_info_new_password_dialog_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_ok"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>