<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border3"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".specialites.RemoveSpeActivity">
    <ImageView
            android:layout_gravity="top|center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/sure"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="gravity"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/del_spe_text"
                android:text="@string/supp_spe"
                android:fontFamily="sans-serif"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/del_spe_button_yes"
                android:text="@string/yes"
                android:textSize="15sp"
                android:textStyle="bold"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:ignore="ButtonStyle"/>
        <Button
                android:id="@+id/del_spe_button_nope"
                android:text="@string/nope"
                android:textSize="15sp"
                android:textStyle="bold"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:ignore="ButtonStyle"/>
    </LinearLayout>
</LinearLayout>