<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:elevation="3dp"
              android:layout_marginTop="30dp"
              android:layout_marginStart="10dp"
              android:padding="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
            android:layout_gravity="end"
            android:tooltipText="@string/spe_info"
            android:src="@drawable/info_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription,UnusedAttribute"/>
    <TextView
            android:text="@string/med_detail"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/name"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_name"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/surname"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_surname"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/genre"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_genre"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/dob"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_dob"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/adresse"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_adresse"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/tel"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_tel"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/email"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_mail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/hopital"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_hop"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/specialite"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/med_info_specialite"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:ignore="UseCompoundDrawables">
        <TextView
                android:text="@string/password"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView
                android:id="@+id/med_info_new_password_icon"
                android:contentDescription="@string/logo"
                android:src="@drawable/edit"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        <ImageView
                android:visibility="gone"
                android:id="@+id/med_info_new_password_icon_close"
                android:contentDescription="@string/logo"
                android:src="@drawable/close"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/med_info_new_password_layout"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="6 caractères au minimun"
                app:helperTextTextColor="@android:color/darker_gray"
                app:endIconMode="password_toggle"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/password"
                android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/med_info_new_password_input"
                    android:layout_width="match_parent"
                    android:autofillHints="password"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <TextView
            android:id="@+id/med_info_new_password_error_text"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:visibility="gone"
            android:id="@+id/med_info_new_password_button"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/med_info_close_btn"
            android:layout_gravity="end"
            android:text="@string/close"
            android:textStyle="bold"
            android:shadowColor="@android:color/white"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>