<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">
    <ImageView
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_bg_remove"
            android:layout_width="80dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:layout_height="80dp" android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/se_connecter"
            android:textAllCaps="true"
            android:shadowColor="@color/gray"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                app:helperText="example@domain.ext"
                app:helperTextTextColor="@android:color/darker_gray"
                app:startIconDrawable="@android:drawable/sym_action_email"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail_input"
                    android:hint="@string/mail_hint"
                    android:autofillHints="emailAddress"
                    android:textSize="18sp"
                    app:boxBackgroundMode="outline"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@android:color/transparent"
                    android:shadowRadius="@integer/material_motion_duration_long_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:id="@+id/mail_input_text_error"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="6 caractères au minimun"
                app:helperTextTextColor="@android:color/darker_gray"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/password"
        android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_input"
                    android:layout_width="match_parent"
                    android:autofillHints="password"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:id="@+id/pass_input_text_error"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:layout_marginTop="20dp"
                android:layout_height="60dp"/>
    </LinearLayout>
</LinearLayout>